--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     </blockquote>
     
     <blockquote class="questions">
-        <p>Who is the President of India?</p>
+        <p>Who is President of India?</p>
     </blockquote>
 
 </body>
